# yew_template

./: Cargo.toml  README.md  Trunk.toml  Trunk_ci.toml  index-238490097faed21e.js  index-7ce930eb33905d81.js  index-b8fc238f3c3f3dab.js  index.html  main.css
.github/workflows/: build.yml
src/: app.rs  main.rs
src/logics/: mod.rs  pi_calc.rs
src/pages/: home.rs  mod.rs  page_not_found.rs  pi_calc.rs
src/styles/: main.sass
